# reget

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: markdown.rs  parse.rs  recipe.html
src/: constants.rs  lib.rs  markdown.rs  model.rs
tests/fixtures/: basic_1.html  basic_2.html  basic_3.html  basic_4.html  basic_5.html  basic_6.html
