[package]
name = "reget"
version = "0.2.0"
edition = "2024"
description = "A simple recipe parser for html and json-ld with optional markdown support"
repository = "https://github.com/julian-go/reget"
license = "MIT"

[dependencies]
scraper = "0.23.1"
serde_json = "1.0.142"

[features]
markdown = []
